bug fix: improper slide message z-index

--- a/src/App.css
+++ b/src/App.css
@@ -276,7 +276,7 @@ nav a:active {
     text-align: center;
     border-radius: 20px;
     position: fixed;
-    z-index: 1;
+    z-index: 9999;
     left: 50%;
     top: 30px;
     font-family: 'Roboto', sans-serif;
